MNT: Re-rendered with conda-build 3.19.2, conda-smithy 3.7.3, and conda-forge-pinning 2020.06.23.06.07.46

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,7 +1,21 @@
+boost_cpp:
+- '1.64'
+c_compiler:
+- gcc
+c_compiler_version:
+- '7'
 channel_sources:
 - conda-forge
 - defaults
+- tudat-team
 channel_targets:
 - tudat-team main
+cxx_compiler:
+- gxx
+cxx_compiler_version:
+- '7'
 docker_image:
 - condaforge/linux-anvil-comp7
+pin_run_as_build:
+  boost-cpp:
+    max_pin: x.x.x
