--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,10 +1,13 @@
 channel_targets:
   - tudat-team main
 channel_sources:
+  - tudat-team
   - conda-forge
   - defaults
+boost_cpp:
+  - 1.64
 channels:
-  sources: [conda-forge, defaults]
+  sources: [tudat-team, conda-forge, defaults]
   targets:
     - [tudat-team, main]
 
