--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: tudat-resources
-  version: 1.0.3
+  version: 1.0.4
 
 source:
   git_url: https://github.com/tudat-team/tudat-resources.git
-  git_rev: v1.0.3
+  git_rev: 2b26468af242dbc41103f4d8559ed8e4762a4379
 
 requirements:
   build:
@@ -14,8 +14,9 @@ requirements:
     # or native when not cross-compiling), and any source pre-processors.
     - {{ compiler('cxx') }}            # [not win]
     - {{ compiler('c') }}              # [not win]
-    - cmake
     - boost-cpp
+    - cmake
+
 
 test:
   downstreams:
