--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
   git_url: https://github.com/tudat-team/tudat-resources.git
-  git_rev: 8333706725e5822f9d117152c684286d030ebf6b
+  git_rev: d1198627ba1e03fcb4ad421b3aa541d9846758c2
 
 build:
   # A non-negative integer representing the build number of the package.
@@ -13,7 +13,7 @@ build:
   #  and versions to determine the latest one. This is important because
   #  new builds that contain bug fixes for the way a package is built may be
   #  added to a repository.
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -36,4 +36,4 @@ about:
   home: http://tudat.tudelft.nl/
   license: BSD
   license_family: BSD
-  summary: A curated database of resources to perform astrodynamics and space research.
+  summary: A resource manager to perform astrodynamics and space research.
