--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,10 @@
 package:
   name: tudat-resources
-  version: 1.0.7
+  version: 1.0.8
 
 source:
   git_url: https://github.com/tudat-team/tudat-resources.git
-  git_rev: 173b7362849e8fcffad0c904cfb038ed2d785850
+  git_rev: 1.0.8
 
 build:
   # A non-negative integer representing the build number of the package.
