--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,13 @@
+{% set name = "tudat-resources" %}
+{% set version = "1.0.10" %}
+
 package:
-  name: tudat-resources
-  version: 1.0.8
+  name: {{ name }}
+  version: {{ version }}
 
 source:
   git_url: https://github.com/tudat-team/tudat-resources.git
-  git_rev: 1.0.8
+  git_rev: {{ version }}
 
 build:
   # A non-negative integer representing the build number of the package.
@@ -13,7 +16,7 @@ build:
   #  and versions to determine the latest one. This is important because
   #  new builds that contain bug fixes for the way a package is built may be
   #  added to a repository.
-  number: 2
+  number: 0
 
 requirements:
   build:
@@ -37,3 +40,8 @@ about:
   license: BSD
   license_family: BSD
   summary: A resource manager to perform astrodynamics and space research.
+  
+extra:
+  recipe-maintainers:
+    - ggarrett13
+
