--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
   #  and versions to determine the latest one. This is important because
   #  new builds that contain bug fixes for the way a package is built may be
   #  added to a repository.
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -26,9 +26,9 @@ requirements:
     # or native when not cross-compiling), and any source pre-processors.
     - {{ compiler('cxx') }}              # [not win]
     - {{ compiler('c') }}                # [not win]
-    - {{ compiler('m2w64_c') }}          # [win]
-    - {{ compiler('m2w64_cxx') }}        # [win]
-#    - vs2017_{{ target_platform  }}      # [win]
+#    - {{ compiler('m2w64_c') }}          # [win]
+#    - {{ compiler('m2w64_cxx') }}        # [win]
+    - vs2017_{{ target_platform  }}      # [win]
     - cmake
 
 test:
