MNT: Re-rendered with conda-build 3.19.2, conda-smithy 3.7.5, and conda-forge-pinning 2020.07.30.14.05.10

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,7 +11,7 @@ environment:
     secure: 162vzpI6vqJ8dKusUseZODe+9BmwpKFBasmD7/L6rgHeqH1mMcfUbrbxdzjjaFE9
 
   matrix:
-    - CONFIG: win_64_target_platformwin-64
+    - CONFIG: win_64_
       CONDA_INSTALL_LOCN: C:\Miniconda36-x64
 
 
