MNT: Re-rendered with conda-build 3.19.2, conda-smithy 3.7.5, and conda-forge-pinning 2020.07.30.14.05.10

--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -3,9 +3,7 @@ c_compiler:
 c_compiler_version:
 - '7'
 channel_sources:
-- conda-forge
-- defaults
-- tudat-team
+- conda-forge, defaults
 channel_targets:
 - tudat-team main
 cxx_compiler:
