--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,7 +1,5 @@
 channel_sources:
-- conda-forge
-- defaults
-- tudat-team
+- msys2, conda-forge, defaults
 channel_targets:
 - tudat-team main
 m2w64_c_compiler:
