MNT: Re-rendered with conda-build 3.19.2, conda-smithy 3.7.10, and conda-forge-pinning 2020.09.10.13.34.01

--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,8 +1,10 @@
+c_compiler:
+- vs2017
 channel_sources:
-- msys2, conda-forge, defaults
+- conda-forge, defaults
 channel_targets:
 - tudat-team main
-m2w64_c_compiler:
-- m2w64-toolchain
+cxx_compiler:
+- vs2017
 target_platform:
 - win-64
