--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,7 +1,7 @@
 c_compiler:
 - vs2017
 channel_sources:
-- conda-forge, defaults
+- tudat-team, conda-forge, defaults
 channel_targets:
 - tudat-team main
 cxx_compiler:
