--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/tudat-team/tudat-resources.git
+  git_url: https://github.com/tudat-team/{{ name }}.git
   git_rev: {{ version }}
 
 build:
@@ -25,9 +25,9 @@ requirements:
     # system and include things such as revision control systems (Git, SVN) make
     # tools (GNU make, Autotool, CMake) and compilers (real cross, pseudo-cross,
     # or native when not cross-compiling), and any source pre-processors.
-    - {{ compiler('cxx') }}
-    - {{ compiler('c') }}
     - cmake
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
 
 test:
   requires:
