Prepared template branch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,7 @@
 {% set name = "tudat-resources" %}
-  {% set version = "1.2.0" %}
+  {% set version = "@VERSION@" %}
+  {% set build = @BUILD@ %}
+  {% set git_rev = @GIT_REV@ %}
 
 package:
   name: {{ name }}
@@ -7,7 +9,7 @@ package:
 
 source:
   git_url: https://github.com/tudat-team/{{ name }}.git
-  git_rev: 8ef7ca3f44f5a4a4c61aab9a37bbe36ff6f7777c
+  git_rev: {{ git_rev }}
 
 build:
   # A non-negative integer representing the build number of the package.
@@ -16,6 +18,7 @@ build:
   #  and versions to determine the latest one. This is important because
   #  new builds that contain bug fixes for the way a package is built may be
   #  added to a repository.
+  number: {{ build }}
 
 requirements:
   build:
@@ -24,19 +27,6 @@ requirements:
     # tools (GNU make, Autotool, CMake) and compilers (real cross, pseudo-cross,
     # or native when not cross-compiling), and any source pre-processors.
     - cmake
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
-
-test:
-  requires:
-    - {{ compiler('cxx') }}
-    - {{ compiler('c') }}
-    - cmake
-  source_files:
-    - test/test_binary
-  commands:
-    - cd ./test/test_binary
-    - bash run_binary_test.sh
 
 about:
   home: http://tudat.tudelft.nl/
@@ -46,6 +36,6 @@ about:
 
 extra:
   recipe-maintainers:
-    - ggarrett13
+    - geoffreygarrett
 
 
