--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,4 @@
 channel_targets:
-  - tudat-team dev
+  - [tudat-team, dev]
 channel_sources:
   - tudat-team dev, tudat-team, conda-forge, defaults
