--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,21 +1,10 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-c_compiler:
-- clang
-c_compiler_version:
-- '12'
 channel_sources:
-- tudat-team, conda-forge, defaults
+- tudat-team dev, tudat-team, conda-forge, defaults
 channel_targets:
-- tudat-team main
-cxx_compiler:
-- clangxx
-cxx_compiler_version:
-- '12'
+- ''
 macos_machine:
 - x86_64-apple-darwin13.4.0
 target_platform:
 - osx-64
-zip_keys:
-- - c_compiler_version
-  - cxx_compiler_version
