--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,10 +1,6 @@
-c_compiler:
-- vs2017
 channel_sources:
-- tudat-team, conda-forge, defaults
+- tudat-team dev, tudat-team, conda-forge, defaults
 channel_targets:
-- tudat-team main
-cxx_compiler:
-- vs2017
+- ''
 target_platform:
 - win-64
