--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,9 +1,9 @@
 cdt_name:
 - cos6
 channel_sources:
-- tudat-team dev, tudat-team, conda-forge, defaults
+- tudat-team, tudat-team, conda-forge, defaults
 channel_targets:
-- ''
+- tudat-team
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 target_platform:
