--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -1,9 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '11.0'
 channel_sources:
-- tudat-team dev, tudat-team, conda-forge, defaults
+- tudat-team, tudat-team, conda-forge, defaults
 channel_targets:
-- ''
+- tudat-team
 macos_machine:
 - arm64-apple-darwin20.0.0
 target_platform:
