--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,6 +1,6 @@
 channel_sources:
-- tudat-team dev, tudat-team, conda-forge, defaults
+- tudat-team, tudat-team, conda-forge, defaults
 channel_targets:
-- ''
+- tudat-team
 target_platform:
 - win-64
