--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "tudat-resources" %}
   {% set version = "1.2.1.dev4" %}
   {% set build = "0" %}
-  {% set git_rev = "1.2.1.dev4" %}
+  {% set git_rev = "v1.2.1.dev4" %}
 
 package:
   name: {{ name }}
