--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -3,7 +3,7 @@ MACOSX_DEPLOYMENT_TARGET:
 channel_sources:
 - tudat-team, tudat-team, conda-forge, defaults
 channel_targets:
-- tudat-team
+- tudat-team dev
 macos_machine:
 - x86_64-apple-darwin13.4.0
 target_platform:
