--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,6 +1,6 @@
 channel_sources:
 - tudat-team, tudat-team, conda-forge, defaults
 channel_targets:
-- tudat-team
+- tudat-team dev
 target_platform:
 - win-64
