--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,7 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 channel_sources:
-- tudat-team, tudat-team, conda-forge, defaults
+- tudat-team, conda-forge, defaults
 channel_targets:
 - tudat-team dev
 macos_machine:
