WIP: Fetch data files uploaded as Github releases to overcome GitHub's 100MB push threshold in the future.
Data files may need to be distributed as GitHub
releases only in the future due to GitHub's upper
limit of 100 MB on pushes to the repository.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,12 +30,14 @@ requirements:
     - {{ compiler('clang') }}          # [win]
     - cmake
     - make                             # [unix]
+    - curl
 
 test:
   requires:
     - {{ compiler('cxx') }}
     - {{ compiler('c') }}
     - cmake
+    - curl
   source_files:
     - test/test_binary
   commands:
