--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -8,12 +8,17 @@ channel_sources:
 - tudat-team, conda-forge, defaults
 channel_targets:
 - tudat-team main
+curl:
+- '7'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '10'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+pin_run_as_build:
+  curl:
+    max_pin: x
 target_platform:
 - linux-64
 zip_keys:
