--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -8,12 +8,17 @@ channel_sources:
 - tudat-team, conda-forge, defaults
 channel_targets:
 - tudat-team main
+curl:
+- '7'
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '14'
 macos_machine:
 - arm64-apple-darwin20.0.0
+pin_run_as_build:
+  curl:
+    max_pin: x
 target_platform:
 - osx-arm64
 zip_keys:
