--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -4,7 +4,12 @@ channel_sources:
 - tudat-team, conda-forge, defaults
 channel_targets:
 - tudat-team main
+curl:
+- '7'
 cxx_compiler:
 - vs2019
+pin_run_as_build:
+  curl:
+    max_pin: x
 target_platform:
 - win-64
