--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,5 +1,5 @@
 c_compiler:
-- vs2019
+- clang
 channel_sources:
 - tudat-team, conda-forge, defaults
 channel_targets:
@@ -7,6 +7,6 @@ channel_targets:
 curl:
 - '8'
 cxx_compiler:
-- vs2019
+- clang
 target_platform:
 - win-64
