--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -2,3 +2,7 @@ channel_targets:
   - tudat-team main
 channel_sources:
   - tudat-team, conda-forge, defaults
+c_compiler:       # [win]
+  - clang         # [win]
+cxx_compiler:     # [win]
+  - clang         # [win]
