--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,9 +25,9 @@ requirements:
     # system and include things such as revision control systems (Git, SVN) make
     # tools (GNU make, Autotool, CMake) and compilers (real cross, pseudo-cross,
     # or native when not cross-compiling), and any source pre-processors.
-    - {{ compiler('cxx') }}            # [not win]
-    - {{ compiler('c') }}              # [not win]
-    - {{ compiler('clang') }}          # [win]
+    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
+    - {{ compiler('clang') }}  # [win]
     - cmake
     - make                             # [unix]
     - curl
@@ -52,6 +52,6 @@ about:
 
 extra:
   recipe-maintainers:
-    - ggarrett13
+    - geoffreygarrett
 
 
