--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,4 @@
 channel_targets:
   - tudat-team main
 channel_sources:
-  - tudat-team, conda-forge, defaults
-c_compiler:       # [win]
-  - clang         # [win]
-cxx_compiler:     # [win]
-  - clang         # [win]
+  - conda-forge, defaults
