--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -5,7 +5,7 @@ c_compiler_version:
 cdt_name:
 - cos6
 channel_sources:
-- tudat-team, conda-forge, defaults
+- conda-forge, defaults
 channel_targets:
 - tudat-team main
 curl:
