Add post-link scripts for Windows and Linux to the recipe for the installation of the python package pyTrk234 (https://github.com/NASA-PDS/PyTrk234#).
Changes:
- recipe/meta.yaml
- recipe/post-link.bat
- recipe/post-link.sh

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,24 @@ requirements:
     # tools (GNU make, Autotool, CMake) and compilers (real cross, pseudo-cross,
     # or native when not cross-compiling), and any source pre-processors.
     - cmake
-    - make # [unix]
+    - make                             # [unix]
+    - curl
+  run:
+    - python
+    - pip
+    - git
+
+test:
+  requires:
+    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
+    - cmake
+    - curl
+  source_files:
+    - test/test_binary
+  commands:
+    - cd ./test/test_binary
+    - bash run_binary_test.sh
 
 about:
   home: http://tudat.tudelft.nl/
