Clone and install pytrk234.
Install pytrk234 in the conda environment by using the
post-link.sh and post-link.bat scripts.

Changes:
- modified:   recipe/meta.yaml
- modified:   recipe/post-link.bat
- modified:   recipe/post-link.sh

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,10 @@ requirements:
     - cmake
     - make                             # [unix]
     - curl
+  run:
+    - python
+    - pip
+    - git
 
 test:
   requires:
